google search console varify

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>FoxWatch Security Guard Services Australia</title>
   <meta name="description" content="FoxWatch Security is a professional security company providing licensed security guards, mobile patrols, event security and concierge protection across Australia." />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <meta name="google-site-verification" content="VqjDd6bXdPL4wmtVqtxLW5ynYnZFioiSLqq1q6r6XX8" />
   <style>
     body {
       font-family: Arial, sans-serif;
