--- a/index.html
+++ b/index.html
@@ -158,7 +158,11 @@
     <h2>Affordable, Reliable & Focused on Results</h2>
 
     <p>
-      FoxWatch operates as an <strong>affordable security company</strong> without cutting corners on training or supervision. Clients can request a <strong>free security quote</strong>, compare tailored security solutions and choose the level of protection that fits their budget while still benefiting from professional oversight and clearly documented safety outcomes.
+      FoxWatch operates as an <strong>   
+              <a href="https://docs.google.com/spreadsheets/d/1tUGniVw1eF_A87-DHZgMBfVwwn0GxxwrvEsd7WpyVFQ/edit?gid=0#gid=0" target="_blank" rel="dofollow">
+        affordable security company
+      </a>
+      </strong> without cutting corners on training or supervision. Clients can request a <strong>free security quote</strong>, compare tailored security solutions and choose the level of protection that fits their budget while still benefiting from professional oversight and clearly documented safety outcomes.
     </p>
 
     <p>
